# mcp-video-downloader

./: .gitignore  CLAUDE_DESKTOP_CONFIG.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_IDE_CONFIG.md  CLAUDE_JSON_FIX.md  CLIENT_README.md  DEPLOYMENT_STATUS.md  DOCKERFILE_UNIFICATION_SUMMARY.md  DOWNLOADS_GUIDE.md  Dockerfile  Dockerfile.wrapper  MIGRATION_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  README.md  SOLUTION_1_DOCKER_VOLUMES.md  STREAMING_README.md  UNIFIED_DOCKERFILE.md  UNIVERSAL_SETUP.md  claude_desktop_config_debug.json  claude_desktop_config_fixed.json  claude_desktop_config_streaming.json  claude_desktop_config_unified.json  claude_desktop_config_working.json  claude_desktop_config_wrapper.json  claude_ide_setup.py  debug_mcp_json.py  debug_mcp_server.py  docker-compose.test.yml  fix_claude_json.py  mcp_wrapper.sh  minimal_mcp_client.py  minimal_mcp_test.py  myproject.toml  pyproject.toml  run-mcp-video-downloader.sh  server-mcp-hello-world.py.txt  streaming_demo.py  streaming_usage_examples.py  streaming_video_client.py  (+11 more)
src/mcp_video_downloader/: __init__.py  __main__.py  server.py
