[project]
name = "mcp-video-downloader"
version = "0.4.1"
description = "A Model Context Protocol server with video download tools"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Marcus Veloso" }]
maintainers = [
    { name = "Marcus Veloso", email = "marcus.v.d.veloso@gmail.com" },
]
keywords = ["mcp", "docker", "video-download", "yt-dlp"]
license = { text = "MIT" }
classifiers = []
dependencies = ["mcp>=1.0.0", "yt-dlp>=2024.1.1"]

[project.scripts]
mcp-video-downloader = "mcp_video_downloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
